--- a/index.njk
+++ b/index.njk
@@ -1,31 +1,34 @@
 ---
 layout: layouts/home.njk
+pageJS: home
 eleventyNavigation:
   key: home
   order: 1
 ---
 <div class="hero-container">
-  <p id="hero-data" aria-hidden="true">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
+  <p id="hero-data">A shipwreck on Machrihanish Beach, Argyll, Scotland.</p>
   <div class="hero" aria-labelledby="hero-data">
     {% image "./source/machrihanish-boat.jpg",
     "A shipwreck on Machrihanish Beach, Argyll, Scotland.", "hero", true %}
 
-    <button aria-hidden="true">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white" aria-hidden="true" focusable="false">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-      </svg>
+    <div class="hero-button-container">
+      <button>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white" aria-hidden="true" focusable="false">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+        </svg>
 
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="var(--color-primary)">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
-      </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+        </svg>
 
-      <span class="vh">Toggle photo information</span>
-    </button>
+        <span class="vh">Toggle photo information</span>
+      </button>
+    </div>
   </div>
 </div>
 
 <div class="rs-column">
-  <p class="rs-text-highlight-secondary rs-hero-statement">Hello. Rising Sky Limited is a web studio based in Scotland.</p>
+  <p class="rs-text-highlight-secondary rs-hero-statement">Hello. Rising Sky Limited is a Scottish web development studio.</p>
 
   <p>Get in touch</p>
   <p>Email</p>
@@ -46,5 +49,3 @@ eleventyNavigation:
 
   <p>More posts can be found in <a href="{{ '/writing/' | url }}">the archive</a>.</p>
 </div>
-
-<script defer src="scripts/home.js"></script>
