--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -1,6 +1,9 @@
 ---
 title: Articles
-permalink: article/ 
+permalink: article/
+eleventyNavigation:
+  key: <article>
+  order: 2
 ---
 
 <p>This is where I keep my longer posts.</p>
