--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,55 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+title: About Rising Sky Ltd
+layout: base
+eleventyNavigation:
+  key: <meta>
+  order: 1
+---
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Rising Sky Ltd</title>
-        <meta name="description" content="A web development studio.">
-        <meta name="generator" content="Eleventy v2.0.1">
-
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/main.css">
-
-        
-
-        
-
-        
-
-    </head>
-
-    <body>
-
-        <header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#">&lt;meta&gt;</a>
-                    </li>
-                    <li>
-                        <a href="#">&lt;article&gt;</a>
-                    </li>
-                    <li>
-                        <a href="#">&lt;small&gt;</a>
-                    </li>
-                    <li>
-                        <a href="#">&lt;img/&gt;</a>
-                    </li>
-                    <li>
-                        <a href="#">&lt;audio&gt;</a>
-                    </li>
-                    <li>
-                        <a href="#">&lt;cite&gt;</a>
-                    </li>
-                </ul>
-            </nav>
-            <h1>About Rising Sky Ltd</h1>
-        </header>
-
-        <main>
-
-            
 <p>It's mid November 2023 and it's cold, crisp and sunny in <a href="#">Argyll today</a>. I'm lucky enough to
     have a few weeks
     off. I've tidied
@@ -95,23 +51,32 @@
 <p>Website features (this list will grow)</p>
 
 <ol>
-<li>11ty setup for local CSS, IMG and JS with access to Node if needed.</li>
+<li>11ty setup</li>
 <ol>
-    <li>CSS will be vanilla. Img will use 11ty plugin.</li>
+    <li>
+        <s>for local CSS, IMG and JS with access to Node if needed</s>.</li>
+    <li>
+        <s>CSS will be vanilla</s>. </li>
+    <li>Img will use 11ty plugin.</li>
     <li>Having read more, will start off with no node modules then look at import maps.</li>
+    <li>
+        <s>Navigation</s>
+    </li>
+    <li>Local fonts</li>
+    <li>Header block</li>
+    <li>taGS</li>
+    <li>Sitemap</li>
+    <li>Code syntax styling</li>
+    <li>RSS</li>
+    <li>Stop AI scraping</li>
+    <li>Favicon</li>
 </ol>
 <li>Create some content first, home page, first 'long bit'</li>
 <li>Document Accessibility test with NVDA</li>
 <ol>
     <li>Research setting up my own accessibility audit.</li>
 </ol>
-<li>Header block</li>
-<li>Local fonts</li>
-<li>Code syntax styling</li>
-<li>RSS</li>
-<li>Stop AI scraping</li>
 <li>Add CSS as learn and document</li>
-<li>Favicon</li>
 <li>Web mentions</li>
 </ol>
 
@@ -141,11 +106,3 @@
 <a href="https://meyerweb.com/eric/thoughts/2023/11/01/blinded-by-the-light-dom/" target="_blank">Blinded By
         the Light DOM by Eric Baily</a> clicked with me so Web Components are added
     to the list.</p>
-
-        </main>
-
-        <footer>&copy; Rising Sky Ltd. 2024</footer>
-
-    </body>
-
-</html>
