--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -1,11 +1,12 @@
 ---
   title: Rising Sky website version 2
-  date: Last Modified
+  published: 2023-11-20
+  updated: 2023-11-22
   css: [css/styles.css]
   js: [js/main.js]
 ---
 
-<p>Updated: {{ date }}.</p>
+<p>Updated: {{published}}.</p>
 
 <p>It's mid November 2023 and it's cold, crisp and sunny in <a href="#">Argyll today</a>. I'm lucky enough to
     have a few weeks
