--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -9,5 +9,5 @@ eleventyNavigation:
 
 <p>This is where I keep my longer posts.</p>
 
-{% set articlelist = collections.article %}
-{% include "article-list.njk" %}
+{% set postlist = collections.article %}
+{% include "post-list.njk" %}
