--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -7,8 +7,13 @@ eleventyNavigation:
 ---
 
 <h2>Articles list</h2>
-{% set articlelist = collections.article %}
-{% include "article-list.njk" %}
+{% set postlist = collections.article %}
+{% include "post-list.njk" %}
+
+<h2>Smalls list</h2>
+{% set postlist = collections.small %}
+{% include "post-list.njk" %}
+
 <!-- node module copying? https://tjaddison.com/blog/2022/08/processing-images-linked-from-frontmatter-with-eleventy-img-to-use-in-meta-tags/ -->
 
 <h2>Improve my accessibility skills</h2>
