--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -6,6 +6,12 @@ eleventyNavigation:
   order: 1
 ---
 
+<p>Rising Sky Limited is a web development studio based in Scotland.</p>
+
+<p>We specialise in e‑learning content, web applications and motion graphic videos.</p>
+
+<p>Patrick Grey is the lead developer and has been hacking away on the web since 2001.</p>
+
 <h2>Articles list</h2>
 {% set postlist = collections.article %}
 {% include "post-list.njk" %}
