--- a/website-build/css/main.css
+++ b/website-build/css/main.css
@@ -1,3 +1,9 @@
+body {
+    font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
+    font-weight: normal;
+    font-size: 120%;
+}
+
 .is-active {
     font-weight: bold;
     color: blue;
