--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -57,28 +57,36 @@
 <ol>
   <li>
     <s>for local CSS, IMG and JS with access to Node if needed</s>.</li>
-  <li>
-    <s>CSS will be vanilla</s>. </li>
-  <li>Img will use 11ty plugin.</li>
-  <li>Having read more, will start off with no node modules then look at import maps.</li>
-  <li>
-    <s>Navigation</s>
-  </li>
-  <li>Drafts</li>
-  <li>Sitemap</li>
-  <li>RSS</li>
-  <li>Robots txt: Stop AI scraping</li>
-  {# https://mikefallows.com/posts/adding-robots-txt-to-eleventy-site/ #}
-  <li>Header block</li>
-  <li>taGS</li>
-  <li>Code syntax styling</li>
-  <li>Logo and Favicon</li>
-  <li>Local fonts</li>
+  <ul>
+    <li>Having read more, will start off with no node modules then look at import maps.</li>
+  </ul>
+<li>
+  <s>CSS will be vanilla</s>. </li>
+<li>
+  <s>Navigation</s>
+</li>
+<li>
+  <s>Drafts</s>
+</li>
+<li>
+  <s>Img will use 11ty plugin</s>.</li>
+<li>
+  <s>Reading list</s>
+</li>
+<li>Sitemap</li>
+<li>RSS</li>
+<li>Robots txt: Stop AI scraping</li>
+{# https://mikefallows.com/posts/adding-robots-txt-to-eleventy-site/ #}
+<li>Header block</li>
+<li>taGS</li>
+<li>Code syntax styling</li>
+<li>Logo and Favicon</li>
+<li>Local fonts</li>
 </ol>
 <li>Create some content first, home page, first 'long bit'</li>
 <li>Document Accessibility test with NVDA</li>
 <ol>
-  <li>Research setting up my own accessibility audit.</li>
+<li>Research setting up my own accessibility audit.</li>
 </ol>
 <li>Add CSS as learn and document</li>
 <li>Web mentions</li>
@@ -88,4 +96,6 @@
 
 <!-- Living documents? Updated resources and summaries? Or separate posts? -->
 
-<img src="./images/patrick-grey-mountain.jpg" alt="Me up a mountain">
+{% image "./images/ben-me-beach.jpg", "rs-image", "Me up a mountain" %}
+
+{# <img src="./images/patrick-grey-mountain.jpg" alt="Me up a mountain"> #}
