Added code syntax highlighting

--- a/website-source/_includes/_layouts/article.njk
+++ b/website-source/_includes/_layouts/article.njk
@@ -1,6 +1,15 @@
 ---
 layout: base
 ---
-<p>This is an article</p>
+
+<h1>{{title}}</h1>
+
+<ul>
+    {% for tag in tags %}
+        <li>
+            <a href="/tags/{{ tag | slugify }}">{{tag}}</a>
+        </li>
+    {% endfor %}
+</ul>
 
 {{ content | safe }}
