--- a/website-source/_includes/post-list.njk
+++ b/website-source/_includes/post-list.njk
@@ -11,7 +11,7 @@
                     <code>{{ post.url }}</code>
                 {% endif %}
             </a>
-            <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLLL yyyy") }}</time>
+            <time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("dd LLLL yyyy") }}</time>
         </li>
     {% endfor %}
 </ol>
