--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -39,14 +39,15 @@
   <li>Photos</li>
   <li>Music</li>
   <li>Reading lists</li>
-  <li>Footer content:</li>
-  <ul>
-    <li>Following on Soc Media</li>
-    <li>Bookmarks on Soc Media (open and read)</li>
-    <li>Uses</li>
-    <li>Cocktail list - uncivilised.</li>
-    <!-- Espresso martini, French 75, Margarita, Martini, Dark & stormy, Old fashioned -->
-  </ul>
+  <li>Footer content:
+    <ul>
+      <li>Following on Soc Media</li>
+      <li>Bookmarks on Soc Media (open and read)</li>
+      <li>Uses</li>
+      <li>Cocktail list - uncivilised.</li>
+      <!-- Espresso martini, French 75, Margarita, Martini, Dark & stormy, Old fashioned -->
+    </ul>
+  </li>
 </ul>
 
 <p>I want as simple and robust an editing and publishing worflow as possible. Don't like MD. Want to be able to
@@ -55,57 +56,67 @@
 <p>Website features (this list will grow)</p>
 
 <ol>
-<li>11ty setup</li>
+  <li>11ty setup:
+  <ol>
+      <li>
+        <s>for local CSS, IMG and JS with access to Node if needed</s>.
+      <ul>
+          <li>Having read more, will start off with no node modules then look at import maps.</li>
+        </ul>
+      </li>
+      <li>
+        <s>CSS will be vanilla</s>. </li>
+      <li>
+        <s>Navigation</s>
+      </li>
+      <li>
+        <s>Drafts</s>
+      </li>
+      <li>
+        <s>Img will use 11ty plugin</s>.</li>
+      <li>
+        <s>Reading list</s>
+      </li>
+      <li>
+        <s>Sitemap</s>
+      </li>
+      <li>
+        <s>Robots txt: Stop AI scraping</s>
+      </li>
+      <li>
+        <s>RSS</s>
+      </li>
+      {# https://mikefallows.com/posts/adding-robots-txt-to-eleventy-site/ #}
+      <li>
+        <s>Header block</s>
+      </li>
+      <li>
+        <s>taGS</s>
+      </li>
+      <li>
+        <s>Add descriptions to all - maybe json for shorts</s>
+      </li>
+      <li>
+        <s>Code syntax styling</s>
+      </li>
+      <li>Images page?</li>
+      {# 
+      Bandwidth would be an issue to show all images
+      Show latest photo and previous 10?
+      Reduce the quality of the original photo by setting max size?
+      #}
+      <li>Logo and Favicon</li>
+      <li>Local fonts</li>
+    </ol>
+  </li>
+  <li>Create some content first, home page, first 'long bit'</li>
+  <li>Document Accessibility test with NVDA
 <ol>
-  <li>
-    <s>for local CSS, IMG and JS with access to Node if needed</s>.</li>
-  <ul>
-    <li>Having read more, will start off with no node modules then look at import maps.</li>
-  </ul>
-<li>
-  <s>CSS will be vanilla</s>. </li>
-<li>
-  <s>Navigation</s>
-</li>
-<li>
-  <s>Drafts</s>
-</li>
-<li>
-  <s>Img will use 11ty plugin</s>.</li>
-<li>
-  <s>Reading list</s>
-</li>
-<li>
-  <s>Sitemap</s>
-</li>
-<li>
-  <s>Robots txt: Stop AI scraping</s>
-</li>
-<li>
-  <s>RSS</s>
-</li>
-{# https://mikefallows.com/posts/adding-robots-txt-to-eleventy-site/ #}
-<li>
-  <s>Header block</s>
-</li>
-<li>
-  <s>taGS</s>
-</li>
-<li>
-  <s>Add descriptions to all - maybe json for shorts</s>
-</li>
-<li>Code syntax styling</li>
-<li>Images page?</li>
-<li>Logo and Favicon</li>
-<li>Local fonts</li>
-</ol>
-<li>Create some content first, home page, first 'long bit'</li>
-<li>Document Accessibility test with NVDA</li>
-<ol>
-<li>Research setting up my own accessibility audit.</li>
-</ol>
-<li>Add CSS as learn and document</li>
-<li>Web mentions</li>
+      <li>Research setting up my own accessibility audit.</li>
+    </ol>
+  </li>
+  <li>Add CSS as learn and document</li>
+  <li>Web mentions</li>
 </ol>
 
 {% highlight "js" %}
