Notes on photo pages added

--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -28,6 +28,15 @@
 
 <aside>You can view previous versions of this site here.</aside>
 
+<h3>Thoughts on image page implementation</h3>
+
+<p>I want a main image (large no lazy load) at top then 10 previous images.</p>
+
+<p>I don't want to leave images that are no longer published up... Just publish one a week and see how it goes. Have a last 10 page then archives for others (with tags). Unpublish if it gets too much.
+  Note to users that you don't display big lilsts of photos to limit bandwidth use.
+  Could allow users to page though single pages and filter by tag.
+</p>
+
 <p>These are the types of content I want to publish:</p>
 
 <!-- DT list? -->
