Added prefers reduced motion to logo

--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -12,3 +12,303 @@ layout: base
         </li>
     {% endfor %}
 </ul>
+
+{# Listen History
+Title
+Listened
+Options
+System Collapse By Martha Wells cover art
+System Collapse
+By: Martha Wells
+1h 25m left
+26/12/2023
+Hide
+Fugitive Telemetry By Martha Wells cover art
+Fugitive Telemetry
+By: Martha Wells
+4h 24m left
+17/12/2023
+Hide
+Network Effect By Martha Wells cover art
+Network Effect
+By: Martha Wells
+12h 47m left
+15/12/2023
+Hide
+Exit Strategy By Martha Wells cover art
+Exit Strategy
+By: Martha Wells
+Finished
+04/12/2023
+Hide
+Rogue Protocol By Martha Wells cover art
+Rogue Protocol
+By: Martha Wells
+3h 46m left
+29/11/2023
+Hide
+Artificial Condition By Martha Wells cover art
+Artificial Condition
+By: Martha Wells
+1m left
+26/11/2023
+Hide
+All Systems Red By Martha Wells cover art
+All Systems Red
+By: Martha Wells
+3h 17m left
+24/11/2023
+Hide
+Never By Ken Follett cover art
+Never
+By: Ken Follett
+12h 7m left
+22/11/2023
+Hide
+The Evening and the Morning By Ken Follett cover art
+The Evening and the Morning
+By: Ken Follett
+Finished
+29/10/2023
+Hide
+The Chase By Ava Glass cover art
+The Chase
+By: Ava Glass
+6h 47m left
+19/09/2023
+Hide
+Thrawn (Star Wars) By Timothy Zahn cover art
+Thrawn (Star Wars) [SAMPLE]
+By: Timothy Zahn
+04/09/2023
+Hide
+Ukraine and the Art of Strategy By Lawrence Freedman cover art
+Ukraine and the Art of Strategy
+By: Lawrence Freedman
+4h 9m left
+03/09/2023
+Hide
+All Fun and Games Until Somebody Loses an Eye By Christopher Brookmyre cover art
+All Fun and Games Until Somebody Loses an Eye
+By: Christopher Brookmyre
+Finished
+01/09/2023
+Hide
+Children of Ruin By Adrian Tchaikovsky cover art
+Children of Ruin
+By: Adrian Tchaikovsky
+15h 25m left
+06/08/2023
+Hide
+Children of Time By Adrian Tchaikovsky cover art
+Children of Time
+By: Adrian Tchaikovsky
+16h 31m left
+16/07/2023
+Hide
+Shards of Earth By Adrian Tchaikovsky cover art
+Shards of Earth [SAMPLE]
+By: Adrian Tchaikovsky
+12/06/2023
+Hide
+Hyperion By Dan Simmons cover art
+Hyperion [SAMPLE]
+By: Dan Simmons
+12/06/2023
+Hide
+Some Desperate Glory By Emily Tesh cover art
+Some Desperate Glory [SAMPLE]
+By: Emily Tesh
+12/06/2023
+Hide
+The Murderer's Son By Joy Ellis cover art
+The Murderer's Son
+By: Joy Ellis
+1m left
+10/06/2023
+Hide
+City on Fire By Don Winslow cover art
+City on Fire
+By: Don Winslow
+8h 20m left
+03/05/2023
+Hide
+A Memory Called Empire By Arkady Martine cover art
+A Memory Called Empire [SAMPLE]
+By: Arkady Martine
+18/04/2023
+Hide
+Love Will Tear Us Apart By C. K. McDonnell cover art
+Love Will Tear Us Apart
+By: C. K. McDonnell
+10h 40m left
+20/03/2023
+Hide
+We Don't Know Ourselves By Fintan O'Toole cover art
+We Don't Know Ourselves
+By: Fintan O'Toole
+20h 47m left
+09/03/2023
+Hide
+The Spy and the Traitor By Ben Macintyre cover art
+The Spy and the Traitor
+By: Ben Macintyre
+14h 32m left
+19/12/2022
+Hide
+Happy and Funny Bedtime Stories for Kids By Victoria Russell cover art
+Happy and Funny Bedtime Stories for Kids
+By: Victoria Russell
+9h 56m left
+01/12/2022
+Hide
+Mermaid School By Lucy Courtenay cover art
+Mermaid School
+By: Lucy Courtenay
+1h 27m left
+01/12/2022
+Hide
+Twigga And Wolfie Have A Short Adventure 🦒🐺 cover art
+Sleep Tight Stories - Bedtime Stories for Kids
+Twigga And Wolfie Have A Short Adventure 🦒🐺
+12m left
+01/12/2022
+Hide
+The Fourth Friend By Joy Ellis cover art
+The Fourth Friend
+By: Joy Ellis
+7h 10m left
+29/11/2022
+Hide
+Episode Nine – 
+GUNDOG
+Episode Nine – "The End Of The Beginning"
+1m left
+29/11/2022
+Hide
+Episode Eight – 
+GUNDOG
+Episode Eight – "Heart-Shaped Box"
+1m left
+27/11/2022
+Hide
+Episode Seven – 
+GUNDOG
+Episode Seven – "Noisy On The Way Out"
+Finished
+27/11/2022
+Hide
+Episode Six – 
+GUNDOG
+Episode Six – "Bismarck"
+2m left
+27/11/2022
+Hide
+Episode Five – 
+GUNDOG
+Episode Five – "The Truth"
+2m left
+25/11/2022
+Hide
+Episode Four – 
+GUNDOG
+Episode Four – "This Little Light Of Mine"
+Finished
+25/11/2022
+Hide
+Episode Three – 
+GUNDOG
+Episode Three – "Land Of Infinite Variety"
+2m left
+25/11/2022
+Hide
+Episode Two – 
+GUNDOG
+Episode Two – "How We'll Win In The End"
+2m left
+24/11/2022
+Hide
+Episode One – 
+GUNDOG
+Episode One – "Dakota"
+1h 6m left
+22/11/2022
+Hide
+Prologue cover art
+GUNDOG
+Prologue
+7m left
+20/11/2022
+Hide
+Their Lost Daughters By Joy Ellis cover art
+Their Lost Daughters
+By: Joy Ellis
+12m left
+16/11/2022
+Hide
+Berlin Game By Len Deighton cover art
+Berlin Game
+By: Len Deighton
+9h 2m left
+07/11/2022
+Hide
+Command Authority By Tom Clancy cover art
+Command Authority
+By: Tom Clancy
+17h 53m left
+24/10/2022
+Hide
+Bad Actors By Mick Herron cover art
+Bad Actors
+By: Mick Herron
+1m left
+02/10/2022
+Hide
+Nonviolent Communication By Marshall Rosenberg PhD cover art
+Nonviolent Communication
+By: Marshall Rosenberg PhD
+5h 8m left
+16/09/2022
+Hide
+Slough House By Mick Herron cover art
+Slough House
+By: Mick Herron
+Finished
+10/09/2022
+Hide
+Joe Country By Mick Herron cover art
+Joe Country
+By: Mick Herron
+Finished
+23/08/2022
+Hide
+London Rules By Mick Herron cover art
+London Rules
+By: Mick Herron
+Finished
+08/08/2022
+Hide
+Spook Street By Mick Herron cover art
+Spook Street
+By: Mick Herron
+Finished
+18/07/2022
+Hide
+Real Tigers By Mick Herron cover art
+Real Tigers
+By: Mick Herron
+Finished
+10/07/2022
+Hide
+The List By Mick Herron cover art
+The List
+By: Mick Herron
+1h 53m left
+15/06/2022
+Hide
+Slow Horses By Mick Herron cover art
+Slow Horses
+By: Mick Herron
+9h 44m left
+08/06/2022
+Hide #}
