--- a/website-source/_includes/_layouts/base.njk
+++ b/website-source/_includes/_layouts/base.njk
@@ -43,6 +43,7 @@
     <body>
 
         <header>
+            {% include "images/logo/rising-sky-logo.svg" %}
             <nav>
                 <ul>
                     {% set navPages = collections.all | eleventyNavigation %}
