--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -108,6 +108,7 @@
       <li>
         <s>Code syntax styling</s>
       </li>
+      <li>Basic layout - main column, logo and navigation</li>
       <li>Images page?</li>
       {# 
       Bandwidth would be an issue to show all images
