--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -1,14 +1,18 @@
 ---
-title: About Rising Sky Ltd
+title: This is Rising Sky
 layout: base
 eleventyNavigation:
   key: <meta>
   order: 1
 ---
 
-<p>Rising Sky Limited is a web development studio based in Scotland.</p>
+<h1>{{title}}</h1>
 
-<p>We specialise in e‑learning content, web applications and motion graphic videos.</p>
+<p>Makes <span data-purpose>websites</span></p>
+
+<p>Rising Sky is a web development studio based in Scotland.</p>
+
+<p>We specialise in e-learning content, web applications and motion graphic videos.</p>
 
 <p>Patrick Grey is the lead developer and has been hacking away on the web since 2001.</p>
 
