--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -110,6 +110,7 @@
       </li>
       <li>Basic layout - main column, logo and navigation</li>
       <li>Images page?</li>
+      <li>Move to 11ty v3</li>
       {# 
       Bandwidth would be an issue to show all images
       Show latest photo and previous 10?
