--- a/website-source/_includes/_layouts/base.njk
+++ b/website-source/_includes/_layouts/base.njk
@@ -43,7 +43,7 @@
     <body>
 
         <header>
-            <span class="rs-logo">{% include "images/logo/rising-sky-logo.svg" %}</span>
+            <a href="/" class="rs-logo">{% include "images/logo/rising-sky-logo.svg" %}</a>
             <nav>
                 <ul>
                     {% set navPages = collections.all | eleventyNavigation %}
